--- a/site/index.html
+++ b/site/index.html
@@ -174,6 +174,7 @@ methodology that applies agile principles to the  process of doing  data science
                 </div>
             </div>
         </div>
+        <!--
         <div class="holder-blog">
         	<div class="container">
             	<div class="blog-heading text-center">
@@ -236,7 +237,7 @@ methodology that applies agile principles to the  process of doing  data science
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
     
     <footer>
