Moved images to img/

--- a/site/book.html
+++ b/site/book.html
@@ -19,8 +19,8 @@
         
 
 		<!-- FAVICONS -->
-		<link rel="shortcut icon" href="favicon.png" type="image/png">
-		<link rel="icon" href="favicon.png" type="image/png">
+		<link rel="shortcut icon" href="img/favicon.png" type="image/png">
+		<link rel="icon" href="img/favicon.png" type="image/png">
         
 	</head>
 
@@ -32,7 +32,7 @@
                 	<div class="row">
                     	<div class="col-sm-3 col-xs-8">
                         	<div class="logo">
-                            	<a href="index.html"><img src="./logo.png" class="img-responsive" alt="Logo"></a>
+                            	<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"></a>
                             </div>
                         </div>
                         <div class="col-sm-9">
@@ -91,7 +91,7 @@
             	<div class="row">
                 	<div class="col-sm-5">
                     	<div class="book-image">
-                        	<img src="./book.jpg" class="img-responsive">
+                        	<img src="img/book.jpg" class="img-responsive">
                         </div>
                     </div>
                     <div class="col-sm-7">
@@ -106,7 +106,7 @@
                             	<li><a href="http://www.oreilly.com/" class="btn btn-book1" target="_blank">Sample Chapter</a></li>
                                 <li><a href="http://shop.oreilly.com/product/0636920051619.do" class="btn btn-book2" target="_blank">Buy Now</a></li>
                                 <li><a href="https://github.com/rjurney/Agile_Data_Code_2" class="btn btn-book3" target="_blank"><i class="fa fa-github"></i> Github Code</a></li>
-                                <li><a href="https://www.amazon.com/Agile-Data-Science-2-0-Applications/dp/1491960116/" class="amazon" target="_blank"><img src="./amazon.png" class="img-responsive"></a></li>
+                                <li><a href="https://www.amazon.com/Agile-Data-Science-2-0-Applications/dp/1491960116/" class="amazon" target="_blank"><img src="img/amazon.png" class="img-responsive"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -159,11 +159,11 @@
     	<div class="container">	
         	<div class="foot-social text-center">
             	<ul class="list-inline">
-                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="./share-1.png" class="img-responsive"></a></li>
-                    <li><a href="http://twitter.com/rjurney" target="_blank"><img src="./share-2.png" class="img-responsive"></a></li>
-                    <li><a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="./share-3.png" class="img-responsive"></a></li>
-                    <li><a href="https://medium.com/@rjurney" target="_blank"><img src="./share-4.png" class="img-responsive"></a></li>
-                    <li><a href="people.html"><img src="./share-5.png" class="img-responsive"></a></li>
+                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="img/share-1.png" class="img-responsive"></a></li>
+                    <li><a href="http://twitter.com/rjurney" target="_blank"><img src="img/share-2.png" class="img-responsive"></a></li>
+                    <li><a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="img/share-3.png" class="img-responsive"></a></li>
+                    <li><a href="https://medium.com/@rjurney" target="_blank"><img src="img/share-4.png" class="img-responsive"></a></li>
+                    <li><a href="people.html"><img src="img/share-5.png" class="img-responsive"></a></li>
                 </ul>
             </div>
             <div class="foot-menu text-center">
