--- a/site/index.html
+++ b/site/index.html
@@ -19,8 +19,8 @@
         
 
 		<!-- FAVICONS -->
-		<link rel="shortcut icon" href="img/favicon/favicon.png" type="image/png">
-		<link rel="icon" href="img/favicon/favicon.png" type="image/png">
+		<link rel="shortcut icon" href="img/favicon.png" type="image/png">
+		<link rel="icon" href="img/favicon.png" type="image/png">
 		<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 		<script type='text/javascript'>
@@ -37,7 +37,7 @@
                 	<div class="row">
                     	<div class="col-sm-3 col-xs-8">
                         	<div class="logo">
-                            	<a href="index.html"><img src="logo.png" class="img-responsive" alt="Logo"/></a>
+                            	<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
                             </div>
                         </div>
                         <div class="col-sm-9">
@@ -185,7 +185,7 @@ methodology that applies agile principles to the  process of doing  data science
                 	<div class="col-sm-4">
                     	<div class="blog-content-all">
                         	<div class="blog-image">
-                            	<img src="blog-image.jpg" class="img-responsive"/>
+                            	<img src="img/blog-image.jpg" class="img-responsive"/>
                             </div>
                             <div class="blog-date text-center">
                             	<h5>Jan <br/> 21</h5>
@@ -244,11 +244,11 @@ methodology that applies agile principles to the  process of doing  data science
     	<div class="container">	
         	<div class="foot-social text-center">
             	<ul class="list-inline">
-                	<li><a href="http://facebook.com/jurney"><img src="share-1.png" class="img-responsive" target="_blank" /></a></li>
-                    <li><a href="http://twitter.com/rjurney"><img src="share-2.png" class="img-responsive" target="_blank" /></a></li>
-                    <li><a href="http://linkedin.com/in/russelljurney"><img src="share-3.png" class="img-responsive"target="_blank" /></a></li>
-                    <li><a href="https://medium.com/@rjurney"><img src="share-4.png" class="img-responsive" target="_blank" /></a></li>
-                    <li><a href="people.html"><img src="share-5.png" class="img-responsive" target="_blank"/></a></li>
+                	<li><a href="http://facebook.com/jurney"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
+                    <li><a href="http://twitter.com/rjurney"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
+                    <li><a href="http://linkedin.com/in/russelljurney"><img src="img/share-3.png" class="img-responsive"target="_blank" /></a></li>
+                    <li><a href="https://medium.com/@rjurney"><img src="img/share-4.png" class="img-responsive" target="_blank" /></a></li>
+                    <li><a href="people.html"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
                 </ul>
             </div>
             <div class="foot-menu text-center">
