--- a/site/people.html
+++ b/site/people.html
@@ -19,8 +19,8 @@
         
 
 		<!-- FAVICONS -->
-		<link rel="shortcut icon" href="favicon.png" type="image/png">
-		<link rel="icon" href="favicon.png" type="image/png">
+		<link rel="shortcut icon" href="img/favicon.png" type="image/png">
+		<link rel="icon" href="img/favicon.png" type="image/png">
         
 	</head>
 
@@ -32,7 +32,7 @@
                 	<div class="row">
                     	<div class="col-sm-3 col-xs-8">
                         	<div class="logo">
-                            	<a href="index.html"><img src="./logo.png" class="img-responsive" alt="Logo"></a>
+                            	<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"></a>
                             </div>
                         </div>
                         <div class="col-sm-9">
@@ -69,7 +69,7 @@
                 	<div class="row">
                     	<div class="col-sm-3">
                         	<div class="prince-image">
-                            	<img src="./prin-1.jpg" class="img-responsive">
+                            	<img src="img/prin-1.jpg" class="img-responsive">
                             </div>
                         </div>
                         <div class="col-sm-9">
@@ -88,30 +88,30 @@
                         	<div class="prince-text">
                             	<ul class="list-unstyled">
                                 <li>
-                                	<a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="./sp-1.png" class="soc"> http://linkedin.com/in/russelljurney</a>
+                                	<a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="img/sp-1.png" class="soc"> http://linkedin.com/in/russelljurney</a>
                                 </li>
-                                <img src="./line.png" class="img-responsive">
+                                <img src="img/line.png" class="img-responsive">
                                 <li>
-                                	<a href="http://github.com/rjurney" target="_blank"><img src="./sp-2.png" class="soc"> http://github.com/rjurney</a>
+                                	<a href="http://github.com/rjurney" target="_blank"><img src="img/sp-2.png" class="soc"> http://github.com/rjurney</a>
                                 </li>
-                                <img src="./line.png" class="img-responsive">
+                                <img src="img/line.png" class="img-responsive">
                                 <li>
-                                	<a href="https://medium.com/@rjurney" target="_blank"><img src="./sp-3.png" class="soc"> https://medium.com/@rjurney</a>
+                                	<a href="https://medium.com/@rjurney" target="_blank"><img src="img/sp-3.png" class="soc"> https://medium.com/@rjurney</a>
                                 </li>
-                                <img src="./line.png" class="img-responsive">
+                                <img src="img/line.png" class="img-responsive">
                                 <li>
-                                	<a href="http://twitter.com/rjurney" target="_blank"><img src="./sp-4.png" class="soc"> http://twitter.com/rjurney</a>
+                                	<a href="http://twitter.com/rjurney" target="_blank"><img src="img/sp-4.png" class="soc"> http://twitter.com/rjurney</a>
                                 </li>
-                                <img src="./line.png" class="img-responsive">
+                                <img src="img/line.png" class="img-responsive">
                                 <li>
-                                	<a href="http://facebook.com/jurney" target="_blank"><img src="./sp-5.png" class="soc"> http://facebook.com/jurney</a>
+                                	<a href="http://facebook.com/jurney" target="_blank"><img src="img/sp-5.png" class="soc"> http://facebook.com/jurney</a>
                                 </li>
                                 </ul>
                             </div>
                         </div>
                     	<div class="col-sm-3">
                         	<div class="prince-image bottom">
-                            	<img src="./prin-2.jpg" class="img-responsive">
+                            	<img src="img/prin-2.jpg" class="img-responsive">
                                 <h4>Russell Jurney</h4>
                                 <p>Principal Consultant</p>
                             </div>
@@ -126,11 +126,11 @@
     	<div class="container">	
         	<div class="foot-social text-center">
             	<ul class="list-inline">
-                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="./share-1.png" class="img-responsive"></a></li>
-                    <li><a href="http://twitter.com/rjurney" target="_blank"><img src="./share-2.png" class="img-responsive"></a></li>
-                    <li><a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="./share-3.png" class="img-responsive"></a></li>
-                    <li><a href="https://medium.com/@rjurney" target="_blank"><img src="./share-4.png" class="img-responsive"></a></li>
-                    <li><a href="people.html#"><img src="./share-5.png" class="img-responsive"></a></li>
+                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="img/share-1.png" class="img-responsive"></a></li>
+                    <li><a href="http://twitter.com/rjurney" target="_blank"><img src="img/share-2.png" class="img-responsive"></a></li>
+                    <li><a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="img/share-3.png" class="img-responsive"></a></li>
+                    <li><a href="https://medium.com/@rjurney" target="_blank"><img src="img/share-4.png" class="img-responsive"></a></li>
+                    <li><a href="people.html#"><img src="img/share-5.png" class="img-responsive"></a></li>
                 </ul>
             </div>
             <div class="foot-menu text-center">
