--- a/site/index.html
+++ b/site/index.html
@@ -10,9 +10,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<!-- CSS -->
-        <link rel="stylesheet" type="text/css" media="screen" href="bootstrap.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="bootstrap-theme.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" rel="stylesheet"> 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open Sans:300,400,500,600,700" rel="stylesheet"> 
