--- a/site/people.html
+++ b/site/people.html
@@ -10,13 +10,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<!-- CSS -->
-        <link rel="stylesheet" type="text/css" media="screen" href="./bootstrap.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="./bootstrap-theme.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="./style.css">
-        <link href="./css" rel="stylesheet"> 
-        <link rel="stylesheet" href="./font-awesome.min.css">
-        <link href="./css(1)" rel="stylesheet"> 
-        
+        <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
 
 		<!-- FAVICONS -->
 		<link rel="shortcut icon" href="img/favicon.png" type="image/png">
