--- a/site/people.html
+++ b/site/people.html
@@ -143,9 +143,9 @@
         </div>
     </footer>
     	
-        <script type="text/javascript" src="./jquery-1.11.3.min.js" language="javascript"></script>
-        <script type="text/javascript" src="./bootstrap.min.js" language="javascript"></script>
-		<script type="text/javascript" src="./custom.js" language="javascript"></script>
-    
+    <script type="text/javascript" src="js/jquery-1.11.3.min.js" language="javascript"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js" language="javascript"></script>
+    <script type="text/javascript" src="js/custom.js" language="javascript"></script>
 
-</body></html>
+    </body>
+</html>
