Copied img/share-1.png to img/share-fb.png and updated html

--- a/people.html
+++ b/people.html
@@ -123,7 +123,7 @@
     	<div class="container">	
         	<div class="foot-social text-center">
             	<ul class="list-inline">
-                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="img/share-1.png" class="img-responsive"></a></li>
+                	<li><a href="http://facebook.com/jurney" target="_blank"><img src="img/share-fb.png" class="img-responsive"></a></li>
                     <li><a href="http://twitter.com/rjurney" target="_blank"><img src="img/share-2.png" class="img-responsive"></a></li>
                     <li><a href="http://linkedin.com/in/russelljurney" target="_blank"><img src="img/share-3.png" class="img-responsive"></a></li>
                     <li><a href="https://medium.com/@rjurney" target="_blank"><img src="img/share-4.png" class="img-responsive"></a></li>
