--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ methodology that applies agile principles to the  process of doing  data science
     	<div class="container">	
         	<div class="foot-social text-center">
             	<ul class="list-inline">
-                	<li><a href="http://facebook.com/jurney"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
+                	<li><a href="http://facebook.com/jurney"><img src="img/share-fb.png" class="img-responsive" target="_blank" /></a></li>
                     <li><a href="http://twitter.com/rjurney"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
                     <li><a href="http://linkedin.com/in/russelljurney"><img src="img/share-3.png" class="img-responsive"target="_blank" /></a></li>
                     <li><a href="https://medium.com/@rjurney"><img src="img/share-4.png" class="img-responsive" target="_blank" /></a></li>
