Veritfication for Google Apps

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		<script type='text/javascript'>
 		(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FULL_NAME';ftypes[1]='text';fnames[2]='NOTE';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
 		</script>
+
+        <!-- Google Apps -->
+        <meta name="google-site-verification" content="xb0-X0nKNMbcz4_HlEViYZAxTaqwaY2RGLo3L6zTeLk" />
         
 	</head>
 
