Put book details in table, now looks much better aligned vertically.

--- a/book.html
+++ b/book.html
@@ -122,29 +122,62 @@
                             </ul>
                             <div class="tab_container">
                               <h3 class="d_active tab_drawer_heading" rel="tab1">Details</h3>
-                              <div id="tab1" class="tab_content" style="display: block;">
-                              <p>Title:		<span>Agile Data Science 2.0</span> </p>
-                              <p>By: 			<span>Russell Jurney</span> </p>
-                              <p>Publisher:	<span>O'Reilly Media</span> </p>
-                              <p>Formats:	<span>Print Safari Books Online  Early Release Ebook</span></p>
-                              <p>Print: 		<span>May 2017 (est.)</span> </p>
-                              <p>Early Release Ebook: <span>September 2016</span> </p>
-                              <p>Pages: 		<span>325 (est.)</span> </p>
-                              <p>Print ISBN:	<span>978-1-4919-6011-0 | ISBN 10:1-4919-6011-6</span></p>
-                              <p>Early Release Ebook ISBN: <span>978-1-4919-6004-2 | ISBN 10:1-4919-6004-3</span></p>
+                              <div id="tab1" class="tab_content">
+                              <div class="detailstable table-responsive">
+                              <table class="table">
+                                <tbody>
+                                <tr>
+                                    <th class="blue">Title:</th>
+                                    <th class="grey">Agile Data Science 2.0</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">By: </th>
+                                    <th class="grey">Russell Jurney</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">Publisher:</th>
+                                    <th class="grey">O'Reilly Media</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">Formats:</th>
+                                    <th class="grey">Print Safari Books Online Early Release Ebook</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">Print:</th>
+                                    <th class="grey">May 2017 (est.)</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">Early Release Ebook:</th>
+                                    <th class="grey">September 2016</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">Pages:</th>
+                                    <th class="grey">325 (est.)</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">Print ISBN:</th>
+                                    <th class="grey">978-1-4919-6011-0 | ISBN 10:1-4919-6011-6</th>
+                                </tr>
+                                <tr>
+                                    <th class="blue">Early Release Ebook ISBN:</th>
+                                    <th class="grey">978-1-4919-6004-2 | ISBN 10:1-4919-6004-3</th>
+                                </tr>
+                                </tbody>
+                				</table>
+                                </div>
                               </div>
                               <!-- #tab1 -->
                               <h3 class="tab_drawer_heading" rel="tab2">Table of Content</h3>
-                              <div id="tab2" class="tab_content" style="display: none;">
+                              <div id="tab2" class="tab_content">
                                 <p>Nunc dui velit, scelerisque eu placerat volutpat, dapibus eu nisi. Vivamus eleifend vestibulum odio non vulputate.</p>
                               </div>
                               <!-- #tab2 -->
                               <h3 class="tab_drawer_heading" rel="tab3">About Author</h3>
-                              <div id="tab3" class="tab_content" style="display: none;">
+                              <div id="tab3" class="tab_content">
                                 <p>Nulla eleifend felis vitae velit tristique imperdiet. Etiam nec imperdiet elit. Pellentesque sem lorem, scelerisque sed facilisis sed, vestibulum sit amet eros.</p>
                               </div>
                               <!-- #tab3 -->
-                            </div>	
+                            </div>
                         </div>
                     </div>
                 </div>
