Updated people with latest bio

--- a/people.html
+++ b/people.html
@@ -72,8 +72,14 @@
                         <div class="col-sm-9">
                         	<div class="prince-text">
                             	<h3>Russell Jurney, <span>Principal Consultant</span></h3>
-                                <p>Russell Jurney is founder and CEO of Relato. Russell has over a decade of experience building analytic applications, from casino gaming to inbox analytics. Russell is passionate about graphs and sees networks in the world around him. Mapping markets to achieve a deeper understanding of how they work is exciting work.</p>
-                                <p>Prior to Relato, Russell was a Data Scientist in Residence at The Hive, where he helped launch E8 Security as their first engineer. Before that he was Evangelist at Hortonworks, after being Senior Data Scientist in product analytics at LinkedIn. Russell is originally from Atlanta, GA. He lives in Pacifica, California.</p>
+                                <p>My name is Russell Jurney. I am principal consultant at Data Syndrome, a product analytics
+                                    consultancy dedicated to advancing the adoption of the development methodology Agile Data Science,
+                                    as outlined in the book Agile Data Science 2.0. I’ve worked as a data scientist for over a decade,
+                                    starting in interactive web visualization and then segwaying towards data products, machine learning
+                                    and artificial intelligence at companies such as Ning, LinkedIn and Hortonworks. I am a self taught
+                                    visualization software engineer, data engineer, data scientist, writer and most recently,
+                                    I’m becoming a teacher. In addition to applied work building analytics products, Data Syndrome
+                                    offers live and video training courses.</p>
                             </div>
                         </div>
                     </div>
