Added link to book

--- a/people.html
+++ b/people.html
@@ -74,7 +74,8 @@
                             	<h3>Russell Jurney, <span>Principal Consultant</span></h3>
                                 <p>My name is Russell Jurney. I am principal consultant at Data Syndrome, a product analytics
                                     consultancy dedicated to advancing the adoption of the development methodology Agile Data Science,
-                                    as outlined in the book Agile Data Science 2.0. I’ve worked as a data scientist for over a decade,
+                                    as outlined in the book <a href="/book.html">Agile Data Science 2.0</a>. I’ve worked
+                                    as a data scientist building data products for over a decade,
                                     starting in interactive web visualization and then segwaying towards data products, machine learning
                                     and artificial intelligence at companies such as Ning, LinkedIn and Hortonworks. I am a self taught
                                     visualization software engineer, data engineer, data scientist, writer and most recently,
