Finished up book.html

--- a/book.html
+++ b/book.html
@@ -169,12 +169,31 @@
                               <!-- #tab1 -->
                               <h3 class="tab_drawer_heading" rel="tab2">Table of Content</h3>
                               <div id="tab2" class="tab_content">
-                                <p>Nunc dui velit, scelerisque eu placerat volutpat, dapibus eu nisi. Vivamus eleifend vestibulum odio non vulputate.</p>
+                                <ol>
+                                    <li>Theory - Introduces the Agile Big Data methodology.</li>
+                                    <li>Toolset - Introduces our toolset, and helps you get it up and running on your own
+machine</li>
+                                    <li>Data - Describes the dataset used in this book</li>
+                                    <li>Collecting and Displaying Records - Helps you download flight data and then connect or “plumb” flight records
+through to a web application.</li>
+                                    <li>Visualizing Data with Charts and Tables - Steps you through how to navigate your data by preparing simple charts in a web
+application.</li>
+                                    <li>Exploring Data with Reports - Teaches you how to extract entities from your data and parametize and link
+between them to create interactive reports.</li>
+                                    <li>Making Predictions - Takes what you’ve done so far and predicts whether your flight will be on-time or
+late.</li>
+                                    <li>Deploying Predictive Systems - Shows how to deploy predictions to ensure they impact real people and systems.</li>
+                                    <li>Improving Predictions - Iteratively improve on the performance of our on-time flight prediction.</li>
+                                </ol>
                               </div>
                               <!-- #tab2 -->
                               <h3 class="tab_drawer_heading" rel="tab3">About Author</h3>
                               <div id="tab3" class="tab_content">
-                                <p>Nulla eleifend felis vitae velit tristique imperdiet. Etiam nec imperdiet elit. Pellentesque sem lorem, scelerisque sed facilisis sed, vestibulum sit amet eros.</p>
+                                <p>Russell Jurney is a practicing data scientist living in Pacifica, CA. He is principal consultant at Data Syndrome.
+                                    His other works
+                                    include <a href="http://shop.oreilly.com/product/0636920025054.do">Agile Data Science (1.0)</a>,
+                                    <a href="http://shop.oreilly.com/product/0636920039006.do">Big Data for Chimps</a>
+                                    and <a href="http://www.oreilly.com/data/free/mapping-big-data.csp">Mapping Big Data</a>.</p>
                               </div>
                               <!-- #tab3 -->
                             </div>
