Added signup form link to google groups for book page

--- a/book.html
+++ b/book.html
@@ -67,14 +67,14 @@
                             </div>
                         </div>
                         <div class="col-sm-8">
-                        	<div class="mail-form">
+                        	<form action="https://groups.google.com/forum/#!forum/agile-data-science/join" method="get" class="mail-form">
                             	<div class="input-group">
                                   <input type="text" class="form-control" placeholder="Write Your Email Address Here...">
                                   <span class="input-group-btn">
                                     <button class="btn btn-default" type="button"><i class="fa fa-envelope-o"></i> Subscribe Me</button>
                                   </span>
                                 </div>	
-                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
