--- a/book.html
+++ b/book.html
@@ -71,7 +71,7 @@
                             	<div class="input-group">
                                   <input type="text" class="form-control" placeholder="Write Your Email Address Here...">
                                   <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button"><i class="fa fa-envelope-o"></i> Subscribe Me</button>
+                                    <button class="btn btn-default" type="submit"><i class="fa fa-envelope-o"></i> Subscribe Me</button>
                                   </span>
                                 </div>	
                             </form>
