Alterations for corporate training page, except for header/footer of other pages.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                                             <li class="active"><a href="index.html">Home</a></li>
                                             <li><a href="people.html">People</a></li>
                                             <li><a href="book.html">Book</a></li>
+                                            <li><a href="training.html">Corporate Training</a></li>
+											<li><a href="video.html">video Training</a></li>
                                         </ul>
                                     </div>
                         		</nav>
