--- a/book.html
+++ b/book.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css">
         <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" rel="stylesheet">
 
 		<!-- FAVICONS -->
 		<link rel="shortcut icon" href="img/favicon.png" type="image/png">
@@ -48,6 +49,8 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="people.html">People</a></li>
                                             <li class="active"><a href="book.html">Book</a></li>
+                                            <li><a href="training.html">Corporate Training</a></li>
+											<li><a href="video.html">video Training</a></li>
                                         </ul>
                                     </div>
                         		</nav>
