--- a/people.html
+++ b/people.html
@@ -48,6 +48,8 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li class="active"><a href="people.html">People</a></li>
                                             <li><a href="book.html">Book</a></li>
+                                            <li><a href="training.html">Corporate Training</a></li>
+											<li><a href="video.html">video Training</a></li>
                                         </ul>
                                     </div>
                         		</nav>
