Now video page works, also fixed header/footer of other pages to add corporate/video training pages.

--- a/video.html
+++ b/video.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
@@ -16,14 +15,19 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="css/owl.carousel.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/owl.theme.default.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
 
 		<!-- FAVICONS -->
 		<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 		<link rel="icon" href="img/favicon.png" type="image/png">
-
+		<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+		<script type='text/javascript'>
+		(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FULL_NAME';ftypes[1]='text';fnames[2]='NOTE';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+		</script>
+        
 	</head>
 
     <body>
@@ -34,7 +38,7 @@
 						<div class="row">
 							<div class="col-sm-3 col-xs-8">
 								<div class="logo">
-									<a href="index.html"><img src="img/header-logo.png" class="img-responsive" alt="Logo"/></a>
+									<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
 								</div>
 							</div>
 							<div class="col-sm-9">
@@ -47,14 +51,14 @@
 												<span class="icon-bar"></span>
 												<span class="icon-bar"></span>
 											</button>
-										</div>
+										</div>                                                                                                                   
 										<div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">Home</a></li>
 												<li><a href="people.html">People</a></li>
 												<li><a href="book.html">Book</a></li>
 												<li><a href="training.html">Corporate Training</a></li>
-												<li class="active"><a href="video.html">Video Training</a></li>
+												<li class="active"><a href="video-training.html">video Training</a></li>
 											</ul>
 										</div>
 									</nav>
@@ -65,8 +69,8 @@
 				</div>
 			</div>
     	</header>
-
-		<div class="holder">
+    
+		<div class="video-training-holder">
 			<div class="container">
 				<div class="main-section">
 					<div class="row">
@@ -74,7 +78,6 @@
 							<div class="main-contents">
 								<div class="top-contents">
 									<h3>Realtime Predictive Analytics</h3>
-									<h5>Russell Jurney</h5>
 									<h5>Agile Data Science</h5>
 									<h5>Full Stack Analytics Applications with Python, Kafka and Spark</h5>
 									<p>This is a professional development class that teaches how to iteratively craft entire analytics web applications using Python, Flask, PySpark, Kafka, MongoDB, ElasticSearch, Bootstrap and D3. This stack is a popular one and is an example of the kind of stack needed to process and refine data at scale in real world applications of data science. During this course, students will use airline flight data to produce an entire analytic web application, from the ground up.</p>
@@ -96,7 +99,7 @@
 												<ul class="list-unstyled">
 													<li>Building a Web Application</li>
 													<li>Realtime Prediction with Spark Streaming</li>
-													<li>Closing the Loop</li>
+													<li>Closing the Loop</li>	
 												</ul>
 											</div>
 										</div>
@@ -120,14 +123,14 @@
 			</div>
 		</div>
 		<footer>
-			<div class="container">
+			<div class="container">	
 				<div class="foot-social text-center">
 					<ul class="list-inline">
-						<li><a href="http://facebook.com/jurney"><img src="img/icons/share-1.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="http://twitter.com/rjurney"><img src="img/icons/share-2.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="http://linkedin.com/in/russelljurney"><img src="img/icons/share-3.png" class="img-responsive"target="_blank" /></a></li>
-						<li><a href="https://medium.com/@rjurney"><img src="img/icons/share-4.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="people.html"><img src="img/icons/share-5.png" class="img-responsive" target="_blank"/></a></li>
+						<li><a href="http://facebook.com/jurney"><img src="img/share-1.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="http://twitter.com/rjurney"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="http://linkedin.com/in/russelljurney"><img src="img/share-3.png" class="img-responsive"target="_blank" /></a></li>
+						<li><a href="https://medium.com/@rjurney"><img src="img/share-4.png" class="img-responsive" target="_blank" /></a></li>
+						<li><a href="people.html"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
 					</ul>
 				</div>
 				<div class="foot-menu text-center">
@@ -135,6 +138,8 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="people.html">People</a></li>
 						<li><a href="book.html">Book</a></li>
+						<li><a href="training.html">Corporate Training</a></li>
+						<li><a href="video.html">Video Training</a></li>
 					</ul>
 				</div>
 				<div class="foot-copy text-center">
