--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 
     <body>
     <header>
-    	<div class="header-top-all inner">
-        	<div class="container">
-            	<div class="header-top-content">
-                	<div class="row">
-                    	<div class="col-sm-3 col-xs-8">
-                        	<div class="logo">
-                            	<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
+        <div class="header-top-all inner">
+            <div class="container">
+                <div class="header-top-content">
+                    <div class="row">
+                        <div class="col-sm-3 col-xs-8">
+                            <div class="logo">
+                                <a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
                             </div>
                         </div>
                         <div class="col-sm-9">
-                        	<div class="mainmenu">
-                            	<nav role="navigation" class="navbar top-navbar">
+                            <div class="mainmenu">
+                                <nav role="navigation" class="navbar top-navbar">
                                     <div class="navbar-header">
                                         <button data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" class="navbar-toggle" type="button">
                                             <span class="sr-only">Toggle navigation</span>
@@ -53,17 +53,17 @@
                                             <span class="icon-bar"></span>
                                             <span class="icon-bar"></span>
                                         </button>
-                                    </div>                                                                                                                   
+                                    </div>
                                     <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                                         <ul class="nav navbar-nav navbar-right">
                                             <li class="active"><a href="index.html">Home</a></li>
                                             <li><a href="people.html">People</a></li>
                                             <li><a href="book.html">Book</a></li>
                                             <li><a href="training.html">Corporate Training</a></li>
-											<li><a href="video.html">video Training</a></li>
+                                            <li><a href="video.html">video Training</a></li>
                                         </ul>
                                     </div>
-                        		</nav>
+                                </nav>
                             </div>
                         </div>
                     </div>
@@ -257,10 +257,12 @@ methodology that applies agile principles to the  process of doing  data science
                 </ul>
             </div>
             <div class="foot-menu text-center">
-            	<ul class="list-inline">
-                	<li><a href="index.html">Home</a></li>
+                <ul class="list-inline">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="book.html">Book</a></li>
+                    <li><a href="training.html">Corporate Training</a></li>
+                    <li><a href="video.html">Video Training</a></li>
                 </ul>
             </div>
             <div class="foot-copy text-center">
