--- a/people.html
+++ b/people.html
@@ -140,10 +140,12 @@
                 </ul>
             </div>
             <div class="foot-menu text-center">
-            	<ul class="list-inline">
-                	<li><a href="index.html">Home</a></li>
+                <ul class="list-inline">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="book.html">Book</a></li>
+                    <li><a href="training.html">Corporate Training</a></li>
+                    <li><a href="video.html">Video Training</a></li>
                 </ul>
             </div>
             <div class="foot-copy text-center">
